<resources>
    <string name="app_name">MI Store</string>


    <!-- Strings related to login -->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="contact_us">Contact us</string>
    <string name="about_us">About Us</string>
    <string name="app_info">App Info</string>
    <string name="contacts">Contacts</string>
    <string name="send_message">Send Message</string>
    <string name="student">Student</string>
    <string name="home">Home</string>
    <string name="communicate">Communicate</string>


    <!--Toolbar menus-->

    <!--Drawer-->

    <!--Drawer Menus-->
    <string name="logout">Logout</string>

    <!--QFinderApp-App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->

    <!--Login Validation-->

    <!--about fragment-->

    <!--rating dialog-->

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="settings">Settings</string>

    <!--button-->

    <!--feed-->

    <!--empty state-->

    <string name="preference_location_title">Recording Storage Location</string>
</resources>
